@@ -15,6 +15,8 @@
     added get_config() for fetching config values
     added user_table(), ticket_table(), secret_table() methods to simplify table lookups
     eliminate need for _get_max_secret_version() - consolidated into fetch_secret()
+    changed make_ticket() no longer takes $r parameter - use object attr
+        instead
 
 Release 0.90
     changed LICENSE information in README removed "same terms as perl" and be
